--- a/index.html
+++ b/index.html
@@ -101,11 +101,17 @@
 								data-aos-duration="900"
 								data-aos-easing="ease-out-quart">
 									<header class="major">
-										<h2>Education & Certifications</h2>
+										<h2 data-aos="slide-up"
+										data-aos-duration="900"
+										data-aos-easing="ease-out-quart">Education & Certifications</h2>
 									</header>
-									<div class="features" style="text-align: justify-all;">
+									<div class="features" style="text-align: justify-all;" data-aos="slide-up"
+									data-aos-duration="900"
+									data-aos-easing="ease-out-quart">
 										<article>
-											<span class="icon fa-gem"></span>
+											<span class="icon fa-gem" data-aos="slide-up"
+											data-aos-duration="900"
+											data-aos-easing="ease-out-quart"></span>
 											<div class="content">
 												<h3>Redeemer's University</h3>
 													<p>BSC Computer Science (2017-2021)</p>
@@ -115,8 +121,12 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
+											<span class="icon solid fa-paper-plane" data-aos="slide-up"
+											data-aos-duration="900"
+											data-aos-easing="ease-out-quart"></span>
+											<div class="content" data-aos="slide-up"
+											data-aos-duration="900"
+											data-aos-easing="ease-out-quart">
 												<h3>New Horizons</h3>
 													<p>Oracle Certified Professional, Java SE 8 Programmer (upgrade from Java SE 7)</p>
 													<p>Issued Nov 2021 · No Expiration Date Issued Nov 2021 · No Expiration Date</p>
@@ -124,8 +134,12 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
+											<span class="icon solid fa-rocket" data-aos="slide-up"
+											data-aos-duration="900"
+											data-aos-easing="ease-out-quart"></span>
+											<div class="content" data-aos="slide-up"
+											data-aos-duration="900"
+											data-aos-easing="ease-out-quart">
 												<h3>Apt Learn</h3>
 												<p>Certificate of Completion - Introduction to Project Management</p>
 												<p>Issued Apr 2022 · No Expiration Date Issued Apr 2022 · No Expiration Date</p>
@@ -133,8 +147,12 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
+											<span class="icon solid fa-signal" data-aos="slide-up"
+											data-aos-duration="900"
+											data-aos-easing="ease-out-quart"></span>
+											<div class="content" data-aos="slide-up"
+											data-aos-duration="900"
+											data-aos-easing="ease-out-quart">
 												<h3>New Horizons</h3>
 												<p>Oracle Database 12c: SQL Fundamentals</p>
 												<p>Issued Nov 2021 · No Expiration Date Issued Nov 2021 · No Expiration Date</p>
@@ -148,11 +166,15 @@
 								<section id="twos" data-aos="slide-up"
 								data-aos-duration="900"
 								data-aos-easing="ease-out-quart">
-									<header class="major">
+									<header class="major" data-aos="slide-up"
+									data-aos-duration="900"
+									data-aos-easing="ease-out-quart">
 										<h2>Projects</h2>
 									</header>
 									<div class="posts">
-										<article>
+										<article data-aos="slide-up"
+										data-aos-duration="900"
+										data-aos-easing="ease-out-quart">
 											<a href="https://github.com/IamSteveAde/Credit-Card-Fraud-Detection" class="image"><img src="images/crca.jpeg" alt="" /></a>
 											<h3>Credit Card Fraud Detection</h3>
 											<p>The project aimed to compare and analyze three different machine learning algorithms.</p>
@@ -160,7 +182,9 @@
 												<li><a href="https://github.com/IamSteveAde/Credit-Card-Fraud-Detection" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<article data-aos="slide-up"
+										data-aos-duration="900"
+										data-aos-easing="ease-out-quart">
 											<a href="death rate in nigeria.html" class="image"><img src="images/dest.PNG" alt="" / onclick="enlargeImg(this)"></a>
 											<h3>Death Rates in Nigeria (2013-2018)</h3>
 											<p>This insightful dashboard answers most of the loaded questions on the death rates in Nigeria</p>
@@ -168,7 +192,9 @@
 												<li><a href="death rate in nigeria.html" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<article data-aos="slide-up"
+										data-aos-duration="900"
+										data-aos-easing="ease-out-quart">
 											<a href="https://github.com/IamSteveAde/Bank-Marketing-Prediction" class="image"><img src="images/mark.jpg" alt="" /></a>
 											<h3>Banking Marketing Campaign</h3>
 											<p>The project focuses on the analysis of a dataset of Bank Marketing campaign.</p>
@@ -176,7 +202,9 @@
 												<li><a href="https://github.com/IamSteveAde/Bank-Marketing-Prediction" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<article data-aos="slide-up"
+										data-aos-duration="900"
+										data-aos-easing="ease-out-quart">
 											<a href="superstore dashboard.html" class="image"><img src="images/store.PNG" alt="" /></a>
 											<h3>Superstore Dashboard (United States)</h3>
 											<p>This interactive dashboard was built to answer some important business questions</p>
@@ -184,7 +212,9 @@
 												<li><a href="superstore dashboard.html" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<article data-aos="slide-up"
+										data-aos-duration="900"
+										data-aos-easing="ease-out-quart">
 											<a href="umemployment.html" class="image"><img src="images/unemp.PNG" alt="" /></a>
 											<h3>Rate of Unemployment in Nigeria (2013-2018)</h3>
 											<p>This dashboard sheds light on the rate of employment in Nigeria. </p>
@@ -192,7 +222,9 @@
 												<li><a href="umemployment.html" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
+										<article data-aos="slide-up"
+										data-aos-duration="900"
+										data-aos-easing="ease-out-quart">
 											<a href="#" class="image"><img src="images/dash.jpg" alt="" /></a>
 											<h3>Covid-Deaths (World Data)</h3>
 											<p>An analysis of how covid-19 has affected some of the countries in the world.</p>
